crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__for.py.md.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
description: "This is a Mermaid graph. You can use https://mermaid.live to visualize it as a diagram."
---
## Function 0
### Source
```python
def func():
    for i in range(5):
        print(i)
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0[["`*(empty)*`"]]
  block1["print(i)\n"]
  block2["for i in range(5):
        print(i)\n"]

  start --> block2
  block2 -- "range(5)" --> block1
  block2 -- "else" --> block0
  block1 --> block2
  block0 --> return
```

## Function 1
### Source
```python
def func():
    for i in range(20):
        print(i)
    else:
        return 0
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0["print(i)\n"]
  block1["return 0\n"]
  block2["for i in range(20):
        print(i)
    else:
        return 0\n"]

  start --> block2
  block2 -- "range(20)" --> block0
  block2 -- "else" --> block1
  block1 --> return
  block0 --> return
```

## Function 2
### Source
```python
def func():
    for i in range(10):
        if i == 5:
            return 1
    return 0
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 0\n"]
  block1["return 1\n"]
  block2["if i == 5:
            return 1\n"]
  block3["for i in range(10):
        if i == 5:
            return 1\n"]

  start --> block3
  block3 -- "range(10)" --> block2
  block3 -- "else" --> block0
  block2 -- "i == 5" --> block1
  block2 -- "else" --> block3
  block1 --> return
  block0 --> return
```

## Function 3
### Source
```python
def func():
    for i in range(111):
        if i == 5:
            return 1
    else:
        return 0
    return 2
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 2\n"]
  block1["return 1\n"]
  block2["if i == 5:
            return 1\n"]
  block3["return 0\n"]
  block4["for i in range(111):
        if i == 5:
            return 1
    else:
        return 0\n"]

  start --> block4
  block4 -- "range(111)" --> block2
  block4 -- "else" --> block3
  block3 --> return
  block2 -- "i == 5" --> block1
  block2 -- "else" --> block4
  block1 --> return
  block0 --> return
```

## Function 4
### Source
```python
def func():
    for i in range(12):
        continue
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0[["`*(empty)*`"]]
  block1["continue\n"]
  block2["for i in range(12):
        continue\n"]

  start --> block2
  block2 -- "range(12)" --> block1
  block2 -- "else" --> block0
  block1 --> block2
  block0 --> return
```

## Function 5
### Source
```python
def func():
    for i in range(1110):
        if True:
            continue
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0[["`*(empty)*`"]]
  block1["continue\n"]
  block2["if True:
            continue\n"]
  block3["for i in range(1110):
        if True:
            continue\n"]

  start --> block3
  block3 -- "range(1110)" --> block2
  block3 -- "else" --> block0
  block2 -- "True" --> block1
  block2 -- "else" --> block3
  block1 --> block3
  block0 --> return
```

## Function 6
### Source
```python
def func():
    for i in range(13):
        break
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0[["`*(empty)*`"]]
  block1["break\n"]
  block2["for i in range(13):
        break\n"]

  start --> block2
  block2 -- "range(13)" --> block1
  block2 -- "else" --> block0
  block1 --> block0
  block0 --> return
```

## Function 7
### Source
```python
def func():
    for i in range(1110):
        if True:
            break
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0[["`*(empty)*`"]]
  block1["break\n"]
  block2["if True:
            break\n"]
  block3["for i in range(1110):
        if True:
            break\n"]

  start --> block3
  block3 -- "range(1110)" --> block2
  block3 -- "else" --> block0
  block2 -- "True" --> block1
  block2 -- "else" --> block3
  block1 --> block0
  block0 --> return
```


