crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__for.py_3.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     for i in range(111):
%%         if i == 5:
%%             return 1
%%     else:
%%         return 0
%%     return 2

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 2\n"]
  block1["return 1\n"]
  block2["if i == 5:
            return 1\n"]
  block3["return 0\n"]
  block4["for i in range(111):
        if i == 5:
            return 1
    else:
        return 0\n"]

  start --> block4
  block4 -- "range(111)" --> block2
  block4 -- "else" --> block3
  block3 --> return
  block2 -- "i == 5" --> block1
  block2 -- "else" --> block4
  block1 --> return
  block0 --> return

