crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__for.py_6.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     for i in range(13):
%%         break

flowchart TD
  start(("Start"))
  return(("End"))
  block0[["`*(empty)*`"]]
  block1["break\n"]
  block2["for i in range(13):
        break\n"]

  start --> block2
  block2 -- "range(13)" --> block1
  block2 -- "else" --> block0
  block1 --> block0
  block0 --> return

