crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__for.py_7.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     for i in range(1110):
%%         if True:
%%             break

flowchart TD
  start(("Start"))
  return(("End"))
  block0[["`*(empty)*`"]]
  block1["break\n"]
  block2["if True:
            break\n"]
  block3["for i in range(1110):
        if True:
            break\n"]

  start --> block3
  block3 -- "range(1110)" --> block2
  block3 -- "else" --> block0
  block2 -- "True" --> block1
  block2 -- "else" --> block3
  block1 --> block0
  block0 --> return

